Setup Google Analytics

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -61,6 +61,7 @@ staging:
   smtp_starttls_auto: true
   smtp_authentication: "plain"
   mailer_sender: <%= ENV["MAILER_SENDER"] %>
+  ga_tracking_id: <%= ENV["GA_TRACKING_ID"] %>
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
@@ -77,3 +78,4 @@ production:
   smtp_starttls_auto: true
   smtp_authentication: "plain"
   mailer_sender: <%= ENV["MAILER_SENDER"] %>
+  ga_tracking_id: <%= ENV["GA_TRACKING_ID"] %>
