Configure sidekiq web and fix sidekiq config

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -63,6 +63,8 @@ staging:
   smtp_authentication: "plain"
   mailer_sender: <%= ENV["MAILER_SENDER"] %>
   ga_tracking_id: <%= ENV["GA_TRACKING_ID"] %>
+  sidekiq_web_usr: <%= ENV["SIDEKIQ_WEB_USR"] %>
+  sidekiq_web_pwd: <%= ENV["SIDEKIQ_WEB_PWD"] %>
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
@@ -79,3 +81,5 @@ production:
   smtp_authentication: "plain"
   mailer_sender: <%= ENV["MAILER_SENDER"] %>
   ga_tracking_id: <%= ENV["GA_TRACKING_ID"] %>
+  sidekiq_web_usr: <%= ENV["SIDEKIQ_WEB_USR"] %>
+  sidekiq_web_pwd: <%= ENV["SIDEKIQ_WEB_PWD"] %>
