Shortcut to switch to local decidim

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,8 @@ RAILS_MAX_THREADS=5
 DATABASE_HOST=
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
+
+## Development
+
+# run bundle install if changed
+USE_LOCAL_DECIDIM=
