Point decidim to populate fork

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,4 @@ DATABASE_USERNAME=
 DATABASE_PASSWORD=
 
 ## Development
-
-# run bundle install if changed
-USE_LOCAL_DECIDIM=
+RAILS_ENV=development
